Refactoring. Package, methods, env variables were renamed.

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # OAuth2.0, OpenID Connect settings
 
-oauth2-redirect-uri=https://fd980002.ngrok.io/action/oauth2-callback
-oauth2-endpoint-names=google,facebook,github
+oauth2.redirect-uri=https://ngrok.io/action/oauth2-callback
+oauth2.endpoint-names=google,facebook,github
 
 oauth2.google.client-id=
 oauth2.google.secret=
